syntax = "proto3";

package product;

option go_package = "./adapter/pkg/product/pb";

import "google/protobuf/Empty.proto";
import "google/protobuf/Timestamp.proto";

service ProductService {
  rpc FindAllByAdmin(google.protobuf.Empty) returns (ListProductResponse);
  rpc FindAll(GetProductByFiltersRequest) returns (ListProductResponse);
  rpc FindAllBySimilarCategory(GetProductByProductCodeRequest) returns (ListProductResponse);
  rpc FindAllRecommendation(GetProductByProductCodeRequest) returns (ListProductRecommendationResponse);
  rpc FindByCode(GetProductByProductCodeRequest) returns (GetProductResponse);
  rpc Create(CreateProductRequest) returns (GetProductResponse);
  rpc Update(UpdateProductRequest) returns (GetProductResponse);
  rpc Delete(GetProductByProductCodeRequest) returns (google.protobuf.Empty);
}

message Product {
  int64 IdProduct = 1;
  string Code = 2;
  string Name = 3;
  optional string Description = 4;
  int32 Price = 5;
  string Category = 6;
  bool IsEmpty = 7;
  int32 Mass = 8;
  optional string Image = 9;
  google.protobuf.Timestamp CreatedAt = 10;
  google.protobuf.Timestamp UpdatedAt = 11;
}

message ProductRecommendation {
  int64  AprioriId = 1;
  string AprioriCode = 2;
  string AprioriItem = 3;
  float AprioriDiscount = 4;
  optional string AprioriDescription = 5;
  optional string AprioriImage = 6;
  int32 ProductTotalPrice = 7;
  int32 PriceDiscount = 8;
  int32 Mass = 9;
}

message ListProductRecommendationResponse {
  repeated ProductRecommendation ProductRecommendation = 1;
}

message ListProductResponse {
  repeated Product Product = 1;
}

message GetProductResponse {
  Product Product = 1;
}

message GetProductByProductCodeRequest {
  string Code = 1;
}

message GetProductByFiltersRequest {
  string Search = 1;
  string Category = 2;
}

message CreateProductRequest {
  string Code = 1;
  string Name = 2;
  string Description = 3;
  int32 Price = 4;
  string Category = 5;
  int32 Mass = 6;
  string Image = 7;
}

message UpdateProductRequest {
  string Code = 1;
  string Name = 2;
  string Description = 3;
  int32 Price = 4;
  string Category = 5;
  bool IsEmpty = 6;
  int32 Mass = 7;
  string Image = 8;
}

